Removed print display in tox

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist = py26
 deps = -r{toxinidir}/dev-requirements.txt
 commands =
 	pip install -e .
-	py.test -s {posargs}
+	py.test {posargs}
 setenv =
     PYTHONWARNINGS=always::DeprecationWarning
 
