--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ env:
   global:
     - PYTHONWARNINGS=always::DeprecationWarning
   matrix:
-    - TOXENV=py26
-    - TOXENV=py27
-    - TOXENV=py32
-    - TOXENV=py33
-    - TOXENV=py34
-    - TOXENV=pypy
+    - TOX_ENV=py26
+    - TOX_ENV=py27
+    - TOX_ENV=py32
+    - TOX_ENV=py33
+    - TOX_ENV=py34
+    - TOX_ENV=pypy
