Fixed tox script

--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,10 @@ deps=
   pip
   pipenv
 commands =
-	pipenv install --dev
-	pipenv run pytest {posargs}
+  pipenv install --dev
+  pipenv run pip install -e .
+  pipenv run pytest -s {posargs}
 setenv =
-    PYTHONWARNINGS=always::DeprecationWarning
+  PYTHONWARNINGS=always::DeprecationWarning
 passenv =
-    HOME
+  HOME
