--- a/Pipfile
+++ b/Pipfile
@@ -1,13 +1,14 @@
 [[source]]
-url = 'https://pypi.python.org/simple'
+url = "https://pypi.python.org/simple"
 verify_ssl = true
 
 [packages]
-requests = '>2.10.0'
+requests = ">2.10.0"
 
 [dev-packages]
-pytest = '>3.0.0'
-mock = '>=2.0.0'
-tox = '>=2.7.0'
-requests-mock = '>=1.3.0'
-betamax = '>=0.8.0'
+pytest = ">3.0.0"
+mock = ">=2.0.0"
+tox = ">=2.7.0"
+requests-mock = ">=1.3.0"
+betamax = ">=0.8.0"
+betamax-serializers = ">=0.2.0"
