--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,32 @@
 language: python
-python:
-  - "2.6"
-  - "2.7"
-  - "3.3"
-  - "3.4"
-  - "3.5"
-  - "3.6"
-  - "3.7"
 
 install:
-  - "pipenv install --dev"
+  - pip install tox
 
 script:
-  - pipenv run pytest tests
+  - tox -e $TOXENV
+
+env:
+  global:
+    - PYTHONWARNINGS=always::DeprecationWarning
+
+matrix:
+  include:
+    - python: 2.6
+      env:
+      - TOXENV=py26
+    - python: 2.7
+      env:
+      - TOXENV=py27
+    - python: 3.3
+      env:
+      - TOXENV=py33
+    - python: 3.4
+      env:
+      - TOXENV=py34
+    - python: 3.5
+      env:
+      - TOXENV=py35
+    - python: 3.6
+      env:
+      - TOXENV=py36
