--- a/Pipfile
+++ b/Pipfile
@@ -3,13 +3,14 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 
 [packages]
-requests = ">2.10.0"
+requests = ">2.18.0"
 PyYAML = ">=3.12.0"
+deprecation ">= 2.0.2"
 
 [dev-packages]
-pytest = ">3.0.0"
+pytest = ">3.6.0"
 mock = ">=2.0.0"
-tox = ">=2.7.0"
-requests-mock = ">=1.3.0"
-betamax = ">=0.8.0"
+tox = ">=3.0.0"
+requests-mock = ">=1.5.0"
+betamax = ">=0.8.1"
 betamax-serializers = ">=0.2.0"
