--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ verify_ssl = true
 [packages]
 requests = ">2.18.0"
 PyYAML = ">=3.12.0"
-deprecation ">= 2.0.2"
+deprecation = ">= 2.0.2"
 
 [dev-packages]
 pytest = ">3.6.0"
