--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ verify_ssl = true
 
 [packages]
 requests = ">2.18.0"
+requests-toolbelt = ">=0.8.0"
 PyYAML = ">=3.12.0"
 deprecation = ">= 2.0.2"
 
