--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,11 @@ matrix:
       env: TOXENV=py35
     - python: 3.6
       env: TOXENV=py36
+    - python: 3.7
+      env: TOXENV=py37
   allow_failures:
     - env: TOXENV=py33
+    - env: TOXENV=py37
 
 install:
   - pip install virtualenv
