Try and fix py36 travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,7 @@ matrix:
 
 install:
   - pip install virtualenv
-  - pip install tox-travis
-  - pip install pip
+  - pip install tox tox-travis
 
 script:
   - tox -e $TOXENV
