Revert "Try and fix py36 travis build"
This reverts commit b16a979b0f4c7c086b1309e13ece92f6ffe6c6cd.

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ matrix:
 
 install:
   - pip install virtualenv
-  - pip install tox tox-travis
+  - pip install tox-travis
+  - pip install pip
 
 script:
   - tox -e $TOXENV
