--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
-envlist = py37
+envlist = py36
 
 [testenv]
 deps=
   pip
   pipenv
 commands =
+  pipenv install pip
   pipenv install --dev
   pipenv run pip install -e .
   pipenv run pytest -s {posargs}
