--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,9 @@ matrix:
     - python: 3.5
       env: TOXENV=py35
     - python: 3.6
-      env: TOXENV=py36
+      env:
+        - TOXENV=py36
+        - PIPENV_IGNORE_VIRTUALENVS=1
     - python: 3.7
       env: TOXENV=py37
       dist: xenial
