--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,12 @@ matrix:
       dist: xenial
     - python: 3.8
       env: TOXENV=py38
+    - python: 3.9
+      env: TOXENV=py39
 
   allow_failures:
     - env: TOXENV=py36
+    - env: TOXENV=py35
 
 install:
   - pip install virtualenv
