--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ matrix:
       env: TOXENV=py38
     - python: 3.9
       env: TOXENV=py39
+    - python: 3.10
+      env: TOXENV=py310
 
   allow_failures:
     - env: TOXENV=py36
