--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,6 @@ env:
 
 matrix:
   include:
-    - python: 3.5
-      env: TOXENV=py35
     - python: 3.6
       env: TOXENV=py36
     - python: 3.7
@@ -19,12 +17,11 @@ matrix:
       env: TOXENV=py38
     - python: 3.9
       env: TOXENV=py39
-    - python: 3.10
+    - python: 3.10-dev
       env: TOXENV=py310
 
   allow_failures:
     - env: TOXENV=py36
-    - env: TOXENV=py35
 
 install:
   - pip install virtualenv
