--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
       env: TOXENV=py38
     - python: 3.9
       env: TOXENV=py39
-    - python: 3.10-dev
+    - python: 3.10
       env: TOXENV=py310
 
   allow_failures:
