--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,16 @@ env:
 
 matrix:
   include:
-    - python: 3.6
+    - python: "3.6"
       env: TOXENV=py36
-    - python: 3.7
+    - python: "3.7.9"
       env: TOXENV=py37
       dist: xenial
-    - python: 3.8
+    - python: "3.8"
       env: TOXENV=py38
-    - python: 3.9
+    - python: "3.9"
       env: TOXENV=py39
-    - python: 3.10
+    - python: "3.10.2"
       env: TOXENV=py310
 
   allow_failures:
