--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 sudo: false
-
+dist: focal
 language: python
 
 env:
@@ -10,14 +10,14 @@ matrix:
   include:
     - python: "3.6"
       env: TOXENV=py36
-    - python: "3.7.9"
+    - python: "3.7"
       env: TOXENV=py37
       dist: xenial
     - python: "3.8"
       env: TOXENV=py38
     - python: "3.9"
       env: TOXENV=py39
-    - python: "3.10.2"
+    - python: "3.10"
       env: TOXENV=py310
 
   allow_failures:
