--- a/Pipfile
+++ b/Pipfile
@@ -4,14 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-requests = "==2.31.0"
-PyYAML = "==6.0.1"
-deprecation = "== 2.1.0"
+requests = ">=2.22.0"
+PyYAML = ">=5.4"
+deprecation = ">= 2.0.6"
 
 [dev-packages]
 pytest = ">=4.5.0"
-mock = "==3.0.5"
-tox = "==3.11.1"
-requests-mock = "==1.6.0"
-betamax = "==0.8.1"
-betamax-serializers = "==0.2.0"
+mock = ">=3.0.5"
+tox = ">=3.11.1"
+requests-mock = ">=1.6.0"
+betamax = ">=0.8.1"
+betamax-serializers = ">=0.2.0"
