Allow 3.7 to fail as it is EOL

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,12 @@ matrix:
       env: TOXENV=py310
     - python: "3.11"
       env: TOXENV=py311
+    - python: "3.12"
+      env: TOXENV=py312
 
   allow_failures:
     - env: TOXENV=py36
+    - env: TOXENV=py37
 
 install:
   - pip install virtualenv
